--- a/Minesweeper/Minesweeper/Minesweeper.csproj
+++ b/Minesweeper/Minesweeper/Minesweeper.csproj
@@ -83,6 +83,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
