--- a/Minesweeper/Minesweeper/packages.config
+++ b/Minesweeper/Minesweeper/packages.config
@@ -20,8 +20,8 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.ProvIDers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.4" targetFramework="net461" />
-  <package id="Microsoft.jQuery.Unobtrusive.ValIDation" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.5" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.9" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
@@ -35,6 +35,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="NLog" version="4.5.3" targetFramework="net461" />
+  <package id="NLog.Config" version="4.5.3" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.5.3" targetFramework="net461" />
   <package id="NuGet.Build" version="2.12.0" targetFramework="net461" />
   <package id="NuGet.CommandLine" version="1.0.11220.26" targetFramework="net461" />
   <package id="NuGetPowerTools" version="0.29" targetFramework="net461" />
