--- a/Minesweeper/Minesweeper/Minesweeper.csproj
+++ b/Minesweeper/Minesweeper/Minesweeper.csproj
@@ -285,6 +285,7 @@
       <DependentUpon>Model.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AuthorizationViewModel.cs" />
     <Compile Include="Models\GameModel.cs" />
     <Compile Include="Models\Cell.cs" />
     <Compile Include="Models\IdentityModels.cs" />
